--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppingList">
-        <activity
-            android:name=".ShoppingListsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CategoriesActivity"
-            android:exported="false" />
+        <activity android:name=".ShoppingListsActivity"></activity>
+        <activity android:name=".CategoriesActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
