--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 06 07:53:16 CST 2022
-sdk.dir=/home/echo/Android/Sdk
+#Sat Feb 12 15:22:21 CST 2022
+sdk.dir=C\:\\Users\\Amala\\AppData\\Local\\Android\\Sdk
